# ChangeLog for dev-python/pygame
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygame/ChangeLog,v 1.72 2011/03/31 17:05:45 ssuominen Exp $

*pygame-1.9.1-r1 (31 Mar 2011)

  31 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> +pygame-1.9.1-r1.ebuild,
  +files/pygame-1.9.1-linux-headers-2.6.38.patch:
  Fix building with linux-headers-2.6.38 by removing support for V4L v1 wrt #359745
  by Billy DeVincentis and Martijn Schmidt.

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org> pygame-1.9.1.ebuild:
  Remove HPPA workaround (bug #289326).

  19 May 2010; Jeroen Roovers <jer@gentoo.org> pygame-1.9.1.ebuild:
  Stable for HPPA (bug #287438).

  09 Jan 2010; Raúl Porcel <armin76@gentoo.org> pygame-1.8.1.ebuild,
  pygame-1.9.1.ebuild:
  Add ~arm

  21 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pygame-1.9.1.ebuild:
  Install examples only with USE="examples" (bug #287990).

  13 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org> -pygame-1.7.1.ebuild,
  -pygame-1.8.0.ebuild, -pygame-1.8.1-r1.ebuild,
  -files/pygame-1.8.1_icon_path.patch:
  clean out old ebuilds

  08 Oct 2009; Raúl Porcel <armin76@gentoo.org> pygame-1.9.1.ebuild:
  alpha/ia64/sparc stable wrt #287438

  07 Oct 2009; nixnut <nixnut@gentoo.org> pygame-1.9.1.ebuild:
  ppc stable #287438

  05 Oct 2009; Markus Meier <maekke@gentoo.org> pygame-1.9.1.ebuild:
  amd64/x86 stable, bug #287438

  04 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pygame-1.9.1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

*pygame-1.9.1 (03 Sep 2009)

  03 Sep 2009; Patrick Lauer <patrick@gentoo.org> +pygame-1.9.1.ebuild,
  +files/config.patch:
  Bump to 1.9.1. Small patch by Lorenz Quack. Fixes #280445

  15 Jul 2009; Jesus Rivero <neurogeek@gentoo.org>
  +files/pygame-1.8.1_icon_path.patch, pygame-1.8.1-r1.ebuild:
  Fixed some tests that failed. Closes Bug #223055.

*pygame-1.8.1-r1 (09 Apr 2009)
