@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pygame
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygame/ChangeLog,v 1.72 2011/03/31 17:05:45 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygame/ChangeLog,v 1.73 2011/04/29 18:40:36 arfrever Exp $
+
+*pygame-1.9.2_pre3082 (29 Apr 2011)
+
+  29 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +pygame-1.9.2_pre3082.ebuild:
+  Version bump. Fixed building with Python 3.2 (bug #293909).
 
 *pygame-1.9.1-r1 (31 Mar 2011)
 
